*Servlets, SpamArchiveSearch, NPPCheck: use WMFWikiFarm to share wiki sessions. Eliminates one network request for many servlet requests. *Wiki: Partial attempt to increase robustness to null inputs (may arise from revision deletion - rare). *Note: test breakage is transitory (TFD nomination on en.wp [[Java]])